--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   firebase_auth: ^5.3.1
   google_sign_in: ^6.2.1
   get: ^4.6.6
+  cloud_firestore: ^5.6.12
+  shared_preferences: ^2.2.1
+
+
 
 dev_dependencies:
   flutter_test:
